# stella

./: .coderabbit.yaml  .codespell-ignore-words.txt  .dockerignore  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .provenance.yml  .squawk.toml  AGENTS.md  BUILD.yml  CLAUDE.md  CODEBASE.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  Gemfile  LICENSE.txt  MANIFESTO.md  NOTICE  README.md  Rakefile  Rudyfile  SECURITY.md  THIRD-PARTY-NOTICES.txt  biome.jsonc  bunfig.toml  cliff.toml  config.ru  docker-compose.override.yml  docker-compose.selfhost.yml  docker-compose.yml  i18n-unused.config.js  i18n.json  knip.json  lefthook.yml  nginx-opencode.conf  (+13 more)
.agents/: ARCHITECTURE.md  GOALS.md  README.md  STATUS.md
.ai/: manifest.json
.changeset/: README.md  config.json
.claude/: settings.json
.codex/: config.toml  hooks.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.oxlint-plugins/: README.md  ai-output-strict-schema.ts  auth-lifecycle.ts  folio-layer-boundaries.ts  forbid-process-env-outside-env-ts.ts  icon-button-requires-tooltip.ts  mcp-security.ts  must-use-result.ts  no-any-casts.ts  no-bare-chrome-query.ts  no-bare-error.ts  no-beforeload-redirect.ts  no-body-ownership-ids.ts  no-centered-scroll-column.ts  no-coerced-optional-union-enum.ts  no-component-on-redirect-route.ts  no-crypto-random-uuid.ts  no-dangerous-type-assertions.ts  no-db-await-in-loop.ts  no-detached-void.ts  no-direct-matter-glyph.ts  no-document-cookie.ts  no-domain-string-literals.ts  no-eager-singleton.ts  no-facade-imports.ts  no-handler-try-catch.ts  no-inline-endpoint-in-routes.ts  no-inline-style-colors.ts  no-input-dir-auto.ts  no-nanoid.ts  no-offset-pagination.ts  no-physical-properties.ts  no-prompt-boundary-casts.ts  no-public-law-browser-globals.ts  no-raw-api-url.ts  no-raw-colors.ts  no-raw-date-input.ts  no-raw-date-parsing.ts  no-raw-error-logging.ts  no-raw-foreground-opacity.ts  (+44 more)
apps/desktop/src-tauri/: Cargo.toml  deny.toml  rustfmt.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json  selfhost-connect-dialog.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  commands.rs  config.rs  deep_link.rs  diagnostics.rs  e2e.rs  i18n.rs  keychain.rs  lib.rs  main.rs  session_manager.rs  session_store.rs  sse.rs  tray.rs  types.rs  updater.rs
doc/: notes.md  postgresql.md
docs/: capability-coverage.md  capability-file-transport.md  railway.md  releases.md  self-hosting.md  showcase-scenes.md
etc/: config  nginx.conf  redis.conf
lib/: sendgrid.rb  stella.rb
migrate/: 2012-11-30-import-custdata.rb  2012-12-05-db-example.rb  2012-12-31-import-cleanup.rb  2013-01-03-1-drop-contacts.rb  2013-01-03-2-create-contacts.rb  2013-01-04-update-customer.rb  2013-01-07-github.rb  2013-03-01-incident.rb
patches/: @tanstack%2Fai-anthropic@0.16.2.patch  @tanstack%2Fai-mistral@0.2.1.patch  @tanstack%2Fai-mistral@0.2.2.patch  @tanstack%2Fai-mistral@0.2.3.patch  @tanstack%2Fai-openrouter@0.15.8.patch  @tanstack%2Fopenai-base@0.9.7.patch  @tanstack%2Fopenai-base@0.9.8.patch
provenance/: THIRD-PARTY-NOTICES.repo.txt  THIRD-PARTY-NOTICES.txt  report.json
railway/: api.railway.json  template-manifest.json  template-readme.md  web.railway.json
scripts/: api-health.ts  bootstrap-publish-packages.sh  build-updater-manifest.sh  bun-ci-retry.sh  bun-ci-retry.test.sh  bundle-baseline.json  bundle-baseline.ts  check-ai-skill-sources.sh  check-api-cli-contract.test.ts  check-api-deployment.test.ts  check-api-deployment.ts  check-bridge-version.sh  check-bridge-version.test.sh  check-lockfile-workspace-versions.ts  check-migration-safety.test.ts  check-migration-safety.ts  check-migrations.sh  check-policy-evidence.test.ts  check-policy-evidence.ts  check-production-freshness.test.ts  check-production-freshness.ts  check-railway-smoke.ts  check-railway-template-draft.ts  check-railway-template-shape.ts  check-release-changelog.sh  check-resolution-ranges.ts  check-staged-secrets.sh  check-web-docker-platform.test.ts  crawl-posture.ts  create-release-manifest.sh  dependency-audit-baseline.json  dependency-audit.ts  deploy-staging-watch-config.sh  detect-desktop-release-changes.sh  detect-desktop-release-changes.test.sh  detect-tauri-rust-changes.sh  dev.sh  link-codex-skills.sh  lint-colors.sh  lint-logical-properties.sh  (+25 more)
try/: 00_play.rb  00_state_tryouts.rb  01_core_ext_try.rb  05_utils_try.rb  06_sendgrid_try.rb  06_stathat_try.rb  07_twilio_try.rb  08_stripe_try.rb  11_analytics_try.rb  20_entropy_try.rb  21_session_try.rb  22_secret_try.rb  23_range_metrics_try.rb  25_vendors_try.rb  (+21 more)
(+4185 files in other folders)
