[package]
name = "stella-desktop"
version = "0.0.1"
edition = "2024"
description = "stella desktop — managed Word editing for stella"
license = "Apache-2.0"

[lib]
name = "stella_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stella-desktop"
path = "src/main.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_lossless = "warn"
dbg_macro = "deny"
doc_link_with_quotes = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
match_wildcard_for_single_variants = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_string_hashes = "deny"
ptr_as_ptr = "warn"
print_stdout = "warn"
print_stderr = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
unused_self = "warn"
used_underscore_binding = "warn"

[lints.rust]
unsafe_code = "forbid"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[profile.release]
panic = "unwind"
lto = true
codegen-units = 1
opt-level = "s"
strip = true
incremental = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "webview-data-url"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures-util = "0.3"
hex = "0.4"
keyring-core = "1"
opener = "0.8"
notify = "8"
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "8.6.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = [
  "crypto-rust",
] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
